--- a/index.html
+++ b/index.html
@@ -170,10 +170,11 @@
               </h5>
               <h5><i class="fa-solid fa-square-check"></i> A phone call</h5>
             </div>
-
-            <button class="btn btn1 px-4" type="submit">
-              GET A FREE CONSULT
-            </button>
+            <a href="#Form">
+              <button class="btn btn1 px-4" type="submit">
+                GET A FREE CONSULT
+              </button>
+            </a>
           </div>
         </div>
       </div>
@@ -358,12 +359,12 @@
                 Vestibulum egestas quam elementum amet non posuere. Mi faucibus
                 pulvinar euismod nibh diam in in sit nibh.
               </p>
-              <div class="subscribe">
+              <!-- <div class="subscribe">
                 <input type="text" />
                 <button class="btn btn1 ms-auto" type="submit">
                   SUBSCRIBE
                 </button>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
