Dummy text replacment and responsivenes adjustment

--- a/index.html
+++ b/index.html
@@ -80,10 +80,9 @@
             <div class="show1">
               <h2>We are here to provide the best services for you</h2>
               <p class="my-4">
-                Lorem ipsum dolor sit amet consectetur. Cras nam nunc leo
-                pharetra risus consequat velit. Enim est amet lobortis a
-                tristique. Eu velit commodo amet sem nibh nunc. Massa viverra
-                malesuada urna ultrices faucibus neque tristique.
+                Daily Living Associates is a non-medical agency. We cater to the
+                elderly, handicapped, socially undeveloped, and people who may
+                have just had surgery and need an extra hand around the house
               </p>
               <button class="btn btn1 px-4" type="submit">LEARN MORE</button>
             </div>
@@ -127,10 +126,9 @@
           </div>
           <div class="col-lg-6 col-sm-12">
             <p>
-              Lorem ipsum dolor sit amet consectetur. Cras nam nunc leo pharetra
-              risus consequat velit. Enim est amet lobortis a tristique. Eu
-              velit commodo amet sem nibh nunc. Massa viverra malesuada urna
-              ultrices faucibus neque tristique.
+              At Daily Living, we believe a little can go a long way whether it
+              be walks in the park, phone calls, or leisure activities, we
+              strive to promote confidence and independence.
             </p>
           </div>
         </div>
@@ -141,10 +139,7 @@
       <div class="container my-5">
         <div class="row g-5 about-content">
           <div class="col-lg-6 col-sm-12">
-            <div class="v1">
-              <img src="./asset/Rectangle 5.png" alt="" class="image0" />
-              <img src="./asset/image4.png" alt="" class="image1" />
-            </div>
+            <img src="./asset/image4-rec.png" alt="" class="img-fluid" />
           </div>
           <div class="col-lg-6 col-sm-12">
             <h3>About Us</h3>
@@ -184,12 +179,6 @@
       <div class="text-center mx-auto services-head">
         <h2>Our Services</h2>
         <h1>What We Do</h1>
-        <p class="">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
-          recusandae voluptatum a quasi quo. Voluptas, voluptatibus sit maiores
-          modi sint eum. Dolor repellendus at quis, laboriosam dolore molestias
-          iste aliquid?
-        </p>
       </div>
 
       <div class="container">
@@ -203,7 +192,11 @@
                   hygiene needs.
                 </p>
               </div>
-              <img src="./asset/image5.png" alt="image5" class="image5" />
+              <img
+                src="./asset/image5.png"
+                alt="image5"
+                class="image5 img-fluid"
+              />
             </div>
           </div>
 
@@ -216,7 +209,11 @@
                   disability .
                 </p>
               </div>
-              <img src="./asset/image6.png" alt="image5" class="image5" />
+              <img
+                src="./asset/image6.png"
+                alt="image5"
+                class="image5 img-fluid"
+              />
             </div>
           </div>
 
@@ -229,35 +226,30 @@
                   and a friendly ear.
                 </p>
               </div>
-              <img src="./asset/image7.png" alt="image6" class="image5" />
+              <img
+                src="./asset/image7.png"
+                alt="image6"
+                class="image5 img-fluid"
+              />
             </div>
           </div>
 
           <div class="col-lg-6 col-sm-12">
             <div class="med">
               <div class="med-tex">
-                <h3>Medical Care</h3>
+                <h3>Transportation</h3>
                 <p>
                   Transportation Services: Here at Daily Living safe rides to
                   doctors appointments and running errands is a must.
                 </p>
               </div>
-              <img src="./asset/image8.png" alt="image7" class="image5" />
+              <img
+                src="./asset/image8.png"
+                alt="image7"
+                class="image5 img-fluid"
+              />
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="asso p-1">
-      <div class="container my-5">
-        <div class="asso-text">
-          <h3>Daily living Associates</h3>
-          <p>
-            Daily Living Associates was built on love and passion for helping
-            others. Everyone has the option to live their best life! We all find
-            ourselves lonely and in need of companionship such as;
-          </p>
         </div>
       </div>
     </section>
@@ -269,10 +261,8 @@
             <div class="side1">
               <h3>Get A Free Consultation</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur. Pulvinar donec
-                consectetur et volutpat laoreet urna. Viverra commodo tellus
-                euismod sed id in lorem. Sem lacus mi aliquet enim viverra netus
-                ut nisl amet. Dictum integer purus volutpat amet sed.
+                Call any one of our trusted Daily Living Associates for your
+                quote today!
               </p>
             </div>
           </div>
@@ -339,32 +329,12 @@
     <section class="footer p-1">
       <div class="container my-5">
         <div class="row">
-          <div class="col-6">
+          <div class="text-center">
             <div class="footer-1">
               <h1>
                 <img src="./asset/facivon.png" alt="" />
                 <span class="fs-4">Daily living Associates</span>
               </h1>
-              <p>
-                Vestibulum egestas quam elementum amet non posuere. Mi faucibus
-                pulvinar euismod nibh diam in in sit nibh. Aliquet libero
-                laoreet a justo aliquam lectus sodales
-              </p>
-            </div>
-          </div>
-          <div class="col-6">
-            <div class="footer-2 ms-auto">
-              <h1>Subscribe</h1>
-              <p>
-                Vestibulum egestas quam elementum amet non posuere. Mi faucibus
-                pulvinar euismod nibh diam in in sit nibh.
-              </p>
-              <!-- <div class="subscribe">
-                <input type="text" />
-                <button class="btn btn1 ms-auto" type="submit">
-                  SUBSCRIBE
-                </button>
-              </div> -->
             </div>
           </div>
         </div>
